// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special"
        href="#"
      >
        File
      </a>
      <a
        class=""
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class=""
        href="#"
      >
        Options
      </a>
      <a
        class="active"
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div>
      <div
        class="flow-menu"
      >
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              disabled=""
              title="[r]eplay flow"
            >
              <i
                class="fa fa-repeat text-primary"
              />
               Replay
            </button>
            <button
              class="btn btn-default"
              title="[D]uplicate flow"
            >
              <i
                class="fa fa-copy text-info"
              />
               Duplicate
            </button>
            <button
              class="btn btn-default"
              disabled=""
              title="revert changes to flow [V]"
            >
              <i
                class="fa fa-history text-warning"
              />
               Revert
            </button>
            <button
              class="btn btn-default"
              title="[d]elete flow"
            >
              <i
                class="fa fa-trash text-danger"
              />
               Delete
            </button>
            <a
              class=""
              href="#"
            >
              <button
                class="btn btn-default"
                title="mark flow"
              >
                <i
                  class="fa fa-paint-brush text-success"
                />
                 Mark▾
              </button>
            </a>
          </div>
          <div
            class="menu-legend"
          >
            Flow Modification
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <a
              class=""
              href="#"
            >
              <button
                class="btn btn-default"
              >
                <i
                  class="fa fa-download"
                />
                 Download▾
              </button>
            </a>
            <a
              class=""
              href="#"
            >
              <button
                class="btn btn-default"
                title="Export flow."
              >
                <i
                  class="fa fa-clone"
                />
                 Export▾
              </button>
            </a>
          </div>
          <div
            class="menu-legend"
          >
            Export
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              disabled=""
              title="[a]ccept intercepted flow"
            >
              <i
                class="fa fa-play text-success"
              />
               Resume
            </button>
            <button
              class="btn btn-default"
              disabled=""
              title="kill intercepted flow [x]"
            >
              <i
                class="fa fa-times text-danger"
              />
               Abort
            </button>
          </div>
          <div
            class="menu-legend"
          >
            Interception
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header 2`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special"
        href="#"
      >
        File
      </a>
      <a
        class=""
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class="active"
        href="#"
      >
        Options
      </a>
      <a
        class=""
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div>
      <div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              title="Open Options"
            >
              <i
                class="fa fa-cogs text-primary"
              />
               Edit Options 
              <sup>
                alpha
              </sup>
            </button>
          </div>
          <div
            class="menu-legend"
          >
            Options Editor
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Strip cache headers 
                <a
                  href="https://docs.mitmproxy.org/stable/overview-features/#anticache"
                  rel="noreferrer"
                  target="_blank"
                >
                  <i
                    class="fa fa-question-circle"
                  />
                </a>
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Use host header for display
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Don't verify server certificates
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            Quick Options
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  checked=""
                  type="checkbox"
                />
                Display Event Log
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Display Command Bar
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            View Options
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header 3`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special open"
        href="#"
      >
        File
      </a>
      <ul
        class="dropdown-menu show"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <li>
          <a
            href="#"
          >
            <i
              class="fa fa-fw fa-folder-open"
            />
             Open...
            <input
              class="hidden"
              type="file"
            />
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            <i
              class="fa fa-fw fa-floppy-o"
            />
             Save
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            <i
              class="fa fa-fw fa-floppy-o"
            />
             Save filtered
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            <i
              class="fa fa-fw fa-trash"
            />
             Clear All
          </a>
        </li>
        <li
          class="divider"
          role="separator"
        />
        <li>
          <a
            href="http://mitm.it/"
            rel="noreferrer"
            target="_blank"
          >
            <i
              class="fa fa-fw fa-external-link"
            />
             Install Certificates...
          </a>
        </li>
      </ul>
      <a
        class=""
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class="active"
        href="#"
      >
        Options
      </a>
      <a
        class=""
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div>
      <div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <button
              class="btn btn-default"
              title="Open Options"
            >
              <i
                class="fa fa-cogs text-primary"
              />
               Edit Options 
              <sup>
                alpha
              </sup>
            </button>
          </div>
          <div
            class="menu-legend"
          >
            Options Editor
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Strip cache headers 
                <a
                  href="https://docs.mitmproxy.org/stable/overview-features/#anticache"
                  rel="noreferrer"
                  target="_blank"
                >
                  <i
                    class="fa fa-question-circle"
                  />
                </a>
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Use host header for display
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Don't verify server certificates
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            Quick Options
          </div>
        </div>
        <div
          class="menu-group"
        >
          <div
            class="menu-content"
          >
            <div
              class="menu-entry"
            >
              <label>
                <input
                  checked=""
                  type="checkbox"
                />
                Display Event Log
              </label>
            </div>
            <div
              class="menu-entry"
            >
              <label>
                <input
                  type="checkbox"
                />
                Display Command Bar
              </label>
            </div>
          </div>
          <div
            class="menu-legend"
          >
            View Options
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header 4`] = `
<DocumentFragment>
  <header>
    <nav
      class="nav-tabs nav-tabs-lg"
    >
      <a
        class="pull-left special"
        href="#"
      >
        File
      </a>
      <a
        class="active"
        href="#"
      >
        Capture
      </a>
      <a
        class=""
        href="#"
      >
        Flow List
      </a>
      <a
        class=""
        href="#"
      >
        Options
      </a>
      <a
        class=""
        href="#"
      >
        Flow
      </a>
      <span
        class="connection-indicator established"
      >
        connected
      </span>
    </nav>
    <div />
  </header>
</DocumentFragment>
`;
